--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "graphql": "^15.5.0",
+    "number-to-words": "^1.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -29,6 +30,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/number-to-words": "^1.2.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "eslint-config-prettier": "^7.2.0",
